Fix namespacing and update some of the template widgets. @todo: remove VE and ECP widgets!

--- a/src/resources/postcss/integrations/plugins/elementor/icons.pcss
+++ b/src/resources/postcss/integrations/plugins/elementor/icons.pcss
@@ -4,7 +4,7 @@
 
 @import "svgs.pcss";
 
-i[class*="tec-elementor-event-widget__icon"]:before {
+i[class*="tec-events-elementor-event-widget__icon"]:before {
 	background-position: center center;
 	background-repeat: no-repeat;
 	content: '';
@@ -15,67 +15,67 @@ i[class*="tec-elementor-event-widget__icon"]:before {
 	width: 22px;
 }
 
-.elementor-navigator__element__element-type i[class*="tec-elementor-event-widget__icon"]:before {
+.elementor-navigator__element__element-type i[class*="tec-events-elementor-event-widget__icon"]:before {
 	height: 14px;
 	width: 14px;
 }
 
-.tec-elementor-event-widget__icon-categories:before {
+.tec-events-elementor-event-widget__icon-categories:before {
 	background-image: svg-inline(elementor-event-categories);
 }
 
-.tec-elementor-event-widget__icon-cost:before {
+.tec-events-elementor-event-widget__icon-cost:before {
 	background-image: svg-inline(elementor-event-cost);
 }
 
-.tec-elementor-event-widget__icon-datetime:before {
+.tec-events-elementor-event-widget__icon-datetime:before {
 	background-image: svg-inline(elementor-event-datetime);
 }
 
-.tec-elementor-event-widget__icon-description:before {
+.tec-events-elementor-event-widget__icon-description:before {
 	background-image: svg-inline(elementor-event-description);
 }
 
-.tec-elementor-event-widget__icon-export:before {
+.tec-events-elementor-event-widget__icon-export:before {
 	background-image: svg-inline(elementor-event-export);
 }
 
-.tec-elementor-event-widget__icon-footer:before {
+.tec-events-elementor-event-widget__icon-footer:before {
 	background-image: svg-inline(elementor-event-footer);
 }
 
-.tec-elementor-event-widget__icon-image:before {
+.tec-events-elementor-event-widget__icon-image:before {
 	background-image: svg-inline(elementor-event-image);
 }
 
-.tec-elementor-event-widget__icon-navigation:before {
+.tec-events-elementor-event-widget__icon-navigation:before {
 	background-image: svg-inline(elementor-event-navigation);
 }
 
-.tec-elementor-event-widget__icon-organizer:before {
+.tec-events-elementor-event-widget__icon-organizer:before {
 	background-image: svg-inline(elementor-event-organizer);
 }
 
-.tec-elementor-event-widget__icon-tags:before {
+.tec-events-elementor-event-widget__icon-tags:before {
 	background-image: svg-inline(elementor-event-tags);
 }
 
-.tec-elementor-event-widget__icon-tickets:before {
+.tec-events-elementor-event-widget__icon-tickets:before {
 	background-image: svg-inline(elementor-event-tickets);
 }
 
-.tec-elementor-event-widget__icon-title:before {
+.tec-events-elementor-event-widget__icon-title:before {
 	background-image: svg-inline(elementor-event-title);
 }
 
-.tec-elementor-event-widget__icon-venue:before {
+.tec-events-elementor-event-widget__icon-venue:before {
 	background-image: svg-inline(elementor-event-venue);
 }
 
-.tec-elementor-event-widget__icon-website:before {
+.tec-events-elementor-event-widget__icon-website:before {
 	background-image: svg-inline(elementor-event-website);
 }
 
-.tec-elementor-event-widget__icon-rsvp:before {
+.tec-events-elementor-event-widget__icon-rsvp:before {
 	background-image: svg-inline(elementor-event-rsvp);
 }
