--- a/src/resources/postcss/integrations/plugins/elementor/widgets/event-export.pcss
+++ b/src/resources/postcss/integrations/plugins/elementor/widgets/event-export.pcss
@@ -4,11 +4,11 @@
  * @since TBD
  */
 
-.tec-elementor-event-widget__export-dropdown {
+.tec-events-elementor-event-widget__export-dropdown {
 	display: inline-block;
 	position: relative;
 
-	.tec-elementor-event-widget__export-dropdown-button {
+	.tec-events-elementor-event-widget__export-dropdown-button {
 		background-color: transparent;
 		background-image: none;
 		border: 1px solid var(--tec-color-accent-primary);
@@ -23,26 +23,26 @@
 			background-color: var(--tec-color-accent-primary);
 			color: var(--tec-color-background);
 
-			.tec-elementor-event-widget__export-dropdown-icon {
+			.tec-events-elementor-event-widget__export-dropdown-icon {
 				fill: #fff;
 			}
 		}
 	}
 
-	.tec-elementor-event-widget__export-dropdown-export-icon {
+	.tec-events-elementor-event-widget__export-dropdown-export-icon {
 		margin-right: var(--tec-spacer-1);
 	}
 
-	.tec-elementor-event-widget__export-dropdown-icon {
+	.tec-events-elementor-event-widget__export-dropdown-icon {
 		fill: #334aff;
 		margin-left: var(--tec-spacer-1);
 
-		&.tec-elementor-event-widget__export-dropdown-icon--active {
+		&.tec-events-elementor-event-widget__export-dropdown-icon--active {
 			transform: rotate(180deg);
 		}
 	}
 
-	.tec-elementor-event-widget__export-dropdown-list {
+	.tec-events-elementor-event-widget__export-dropdown-list {
 		background-color: var(--tec-color-background);
 		border: 1px solid var(--tec-color-border-secondary);
 		border-radius: var(--tec-border-radius-default);
@@ -60,7 +60,7 @@
 		}
 	}
 
-	.tec-elementor-event-widget__export-dropdown-list-item {
+	.tec-events-elementor-event-widget__export-dropdown-list-item {
 		font-family: var(--tec-font-family-sans-serif);
 		font-size: var(--tec-font-size-2);
 		font-weight: var(--tec-font-weight-regular);
@@ -79,7 +79,7 @@
 		}
 	}
 
-	.tec-elementor-event-widget__export-dropdown-link {
+	.tec-events-elementor-event-widget__export-dropdown-link {
 		border-bottom-color: currentColor;
 		color: var(--tec-color-text-primary);
 	}
