--- a/src/resources/postcss/integrations/plugins/elementor/widgets/event-organizer.pcss
+++ b/src/resources/postcss/integrations/plugins/elementor/widgets/event-organizer.pcss
@@ -4,20 +4,20 @@
  * @since TBD
  */
 
-.tec-elementor-event-widget__organizer {
+.tec-events-elementor-event-widget__organizer {
 	padding-bottom: var(--tec-spacer-2);
 
-	.tec-elementor-event-widget__organizer-phone-label,
-	.tec-elementor-event-widget__organizer-email-label,
-	.tec-elementor-event-widget__organizer-website-label {
+	.tec-events-elementor-event-widget__organizer-phone-label,
+	.tec-events-elementor-event-widget__organizer-email-label,
+	.tec-events-elementor-event-widget__organizer-website-label {
 		padding-bottom: var(--tec-spacer-1);
 	}
 
-	.tec-elementor-event-widget__organizer-website > a {
+	.tec-events-elementor-event-widget__organizer-website > a {
 		border-color: currentColor;
 	}
 
-	.tec-elementor-event-widget__organizer-name-link {
+	.tec-events-elementor-event-widget__organizer-name-link {
 		border-color: currentColor;
 	}
 }
