--- a/src/resources/postcss/integrations/plugins/elementor/widgets/event-tags.pcss
+++ b/src/resources/postcss/integrations/plugins/elementor/widgets/event-tags.pcss
@@ -4,14 +4,14 @@
  * @since TBD
  */
 
-.tec-elementor-event-widget__tags {
+.tec-events-elementor-event-widget__tags {
 	padding-bottom: var(--tec-spacer-5);
 
-	.tec-elementor-event-widget__tags-label {
+	.tec-events-elementor-event-widget__tags-label {
 		padding-bottom: var(--tec-spacer-1);
 	}
 
-	.tec-elementor-event-widget__tags-link {
+	.tec-events-elementor-event-widget__tags-link {
 		border-bottom-color: currentColor;
 	}
 }
