--- a/src/resources/postcss/integrations/plugins/elementor/widgets/event-website.pcss
+++ b/src/resources/postcss/integrations/plugins/elementor/widgets/event-website.pcss
@@ -4,8 +4,8 @@
  * @since TBD
  */
 
-.tec-elementor-event-widget__website {
-	.tec-elementor-event-widget__website-link > a {
+.tec-events-elementor-event-widget__website {
+	.tec-events-elementor-event-widget__website-link > a {
 		border-color: currentColor;
 		color: var(--tec-color-text-primary);
 		font-weight: var(--tec-font-weight-regular);
